
Deferred Whishlist:
---------------------
* icons for SuRuns context menu entries
* Intercept CreateProcessAsUser in services and check for programs started 
  with limited rights that need to be started as admin

------------------------------------------------------------------------------
SuRun Changes:
------------------------------------------------------------------------------

SuRun 1.2.1.3b2 - 2017-08-09
----------------------------
* NEW: Moderated Restricted Surunners. ("User can only run predefined programs 
			 with elevated rights")
	     If a restricted SuRunner tries to run a non validated Programm with 
	     elevated rights, SuRun will now ask for Administrator credentials to 
	     launch the program elevated in the user's context.
* FIX: Fixed Spanish Resources

SuRun 1.2.1.3b1 - 2017-03-11
----------------------------
* NEW: SuRun Executables are digitally signed
* CHG: Changed SuRun's Context Menu Strings from "<...>" to "SuRun: <...>"
* FIX: Members of "Power Users" and "Backup Opeators" could not use SuRun
* FIX: Bug in IAT-Hooks made Internet Explorer Crash on Windows 10

SuRun 1.2.1.2 - 2015-08-09
----------------------------
* CHG: Made Hooks Windows X compatible.

SuRun 1.2.1.1 - 2015-02-15
----------------------------
* NEW: Option to hide SuRun's "green smiley" tray icon
* NEW: Support for Windows 8 and Windows 8.1
* CHG: Option "remember password" in RunAs-Dialog is grayed out when SuRun 
       always asks for the user's password
* CHG: In Windows Vista and later SuRun does not modify registry settings for 
       UAC "Run as administrator". 
       This enables <ctrl>+<shift>+<lClick> for pinned programs in Explorer.
* CHG: The hooks ignore all command lines with "://" before the first " ".
       So any http://www.yyy.zzz commands are initially ignored.
* CHG: IAT-Hook intercepts ShellExecute and friends because Windows does 
       not support SEE_MASK_NOCLOSEPROCESS in IShellExecuteHook.