@@ -30,6 +30,10 @@ Deferred Whishlist:
 SuRun Changes:
 ------------------------------------------------------------------------------
 
+SuRun 1.2.1.3b3 - 2017-08-20
+----------------------------
+* NEW: SuRun detects renamed computer and imports user's settings
+
 SuRun 1.2.1.3b2 - 2017-08-09
 ----------------------------
 * NEW: Moderated Restricted Surunners. ("User can only run predefined programs 
